fix margin-bottom on mobile post form

--- a/client/styles/home.scss
+++ b/client/styles/home.scss
@@ -20,6 +20,7 @@
   .postform {
     min-width: 350px;
     margin: 115px 10px;
+    margin-bottom: 15px;
 
     .btn-success {
       font-size: 10px;
